Navbar for admin - options

--- a/src/main/resources/templates/fragments/navbar-for-admin.html
+++ b/src/main/resources/templates/fragments/navbar-for-admin.html
@@ -17,10 +17,10 @@
                         Courses
                     </a>
                     <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" th:href="@{/main-page/all-courses}">Show</a></li>
-                        <li><a class="dropdown-item" th:href="@{/main-page/courses}">Add</a></li>
-                        <li><a class="dropdown-item" th:href="@{/main-page/courses/update-course}">Update</a></li>
-                        <li><a class="dropdown-item" th:href="@{/main-page/courses/delete-course}">Delete</a></li>
+                        <li><a class="dropdown-item" th:href="@{/main-page/all-courses}" style="background-color: palegreen; color: darkgreen">Show</a></li>
+                        <li><a class="dropdown-item" th:href="@{/main-page/courses}" style="background-color: darkgreen; color: palegreen">Add</a></li>
+                        <li><a class="dropdown-item" th:href="@{/main-page/courses/update-course}" style="background-color: palegreen; color: darkgreen">Update</a></li>
+                        <li><a class="dropdown-item" th:href="@{/main-page/courses/delete-course}" style="background-color: darkgreen; color: palegreen">Delete</a></li>
                     </ul>
                 </li>
                 <li class="nav-item dropdown">
@@ -28,10 +28,10 @@
                         Blocks
                     </a>
                     <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" th:href="@{/main-page/all-blocks}">Show</a></li>
-                        <li><a class="dropdown-item" th:href="@{/main-page/blocks}">Add</a></li>
-                        <li><a class="dropdown-item" th:href="@{/main-page/blocks/update-block}">Update</a></li>
-                        <li><a class="dropdown-item" th:href="@{/main-page/blocks/delete-block}">Delete</a></li>
+                        <li><a class="dropdown-item" th:href="@{/main-page/all-blocks}" style="background-color: palegreen; color: darkgreen">Show</a></li>
+                        <li><a class="dropdown-item" th:href="@{/main-page/blocks}" style="background-color: darkgreen; color: palegreen">Add</a></li>
+                        <li><a class="dropdown-item" th:href="@{/main-page/blocks/update-block}" style="background-color: palegreen; color: darkgreen">Update</a></li>
+                        <li><a class="dropdown-item" th:href="@{/main-page/blocks/delete-block}" style="background-color: darkgreen; color: palegreen">Delete</a></li>
                     </ul>
                 </li>
                 <li class="nav-item dropdown">
@@ -39,10 +39,10 @@
                         Classes
                     </a>
                     <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" th:href="@{/main-page/all-classes}">Show</a></li>
-                        <li><a class="dropdown-item" th:href="@{/main-page/classes}">Add</a></li>
-                        <li><a class="dropdown-item" th:href="@{/main-page/classes/update-class}">Update</a></li>
-                        <li><a class="dropdown-item" th:href="@{/main-page/classes/delete-class}">Delete</a></li>
+                        <li><a class="dropdown-item" th:href="@{/main-page/all-classes}" style="background-color: palegreen; color: darkgreen">Show</a></li>
+                        <li><a class="dropdown-item" th:href="@{/main-page/classes}" style="background-color: darkgreen; color: palegreen">Add</a></li>
+                        <li><a class="dropdown-item" th:href="@{/main-page/classes/update-class}" style="background-color: palegreen; color: darkgreen">Update</a></li>
+                        <li><a class="dropdown-item" th:href="@{/main-page/classes/delete-class}" style="background-color: darkgreen; color: palegreen">Delete</a></li>
                     </ul>
                 </li>
                 <li class="nav-item dropdown">
@@ -50,10 +50,10 @@
                         Users
                     </a>
                     <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" th:href="@{/main-page/all-users}">Show</a></li>
-                        <li><a class="dropdown-item" th:href="@{/main-page/users}">Add</a></li>
-                        <li><a class="dropdown-item" th:href="@{/main-page/users/update-user}">Update</a></li>
-                        <li><a class="dropdown-item" th:href="@{/main-page/users/delete-user}">Delete</a></li>
+                        <li><a class="dropdown-item" th:href="@{/main-page/all-users}" style="background-color: palegreen; color: darkgreen">Show</a></li>
+                        <li><a class="dropdown-item" th:href="@{/main-page/users}" style="background-color: darkgreen; color: palegreen">Add</a></li>
+                        <li><a class="dropdown-item" th:href="@{/main-page/users/update-user}" style="background-color: palegreen; color: darkgreen">Update</a></li>
+                        <li><a class="dropdown-item" th:href="@{/main-page/users/delete-user}" style="background-color: darkgreen; color: palegreen">Delete</a></li>
                     </ul>
                 </li>
                 <li class="nav-item dropdown">
@@ -61,10 +61,10 @@
                         Registrations
                     </a>
                     <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" th:href="@{/main-page/all-registrations}">Show</a></li>
-                        <li><a class="dropdown-item" th:href="@{/main-page/registrations}">Add</a></li>
-                        <li><a class="dropdown-item" th:href="@{/main-page/registrations/update-registration}">Update</a></li>
-                        <li><a class="dropdown-item" th:href="@{/main-page/registrations/delete-registration}">Delete</a></li>
+                        <li><a class="dropdown-item" th:href="@{/main-page/all-registrations}" style="background-color: palegreen; color: darkgreen">Show</a></li>
+                        <li><a class="dropdown-item" th:href="@{/main-page/registrations}" style="background-color: darkgreen; color: palegreen">Add</a></li>
+                        <li><a class="dropdown-item" th:href="@{/main-page/registrations/update-registration}" style="background-color: palegreen; color: darkgreen">Update</a></li>
+                        <li><a class="dropdown-item" th:href="@{/main-page/registrations/delete-registration}" style="background-color: darkgreen; color: palegreen">Delete</a></li>
                     </ul>
                 </li>
                 <li class="nav-item dropdown">
@@ -72,10 +72,10 @@
                         Notifications
                     </a>
                     <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" th:href="@{/main-page/all-notifications}">Show</a></li>
-                        <li><a class="dropdown-item" th:href="@{/main-page/notifications}">Add</a></li>
-                        <li><a class="dropdown-item" th:href="@{/main-page/notifications/update-notification}">Update</a></li>
-                        <li><a class="dropdown-item" th:href="@{/main-page/notifications/delete-notification}">Delete</a></li>
+                        <li><a class="dropdown-item" th:href="@{/main-page/all-notifications}" style="background-color: palegreen; color: darkgreen">Show</a></li>
+                        <li><a class="dropdown-item" th:href="@{/main-page/notifications}" style="background-color: darkgreen; color: palegreen">Add</a></li>
+                        <li><a class="dropdown-item" th:href="@{/main-page/notifications/update-notification}" style="background-color: palegreen; color: darkgreen">Update</a></li>
+                        <li><a class="dropdown-item" th:href="@{/main-page/notifications/delete-notification}" style="background-color: darkgreen; color: palegreen">Delete</a></li>
                     </ul>
                 </li>
             </ul>
