Main page for admin done

--- a/src/main/resources/templates/fragments/navbar-for-admin.html
+++ b/src/main/resources/templates/fragments/navbar-for-admin.html
@@ -9,7 +9,7 @@
 <body>
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid" style="background-color: darkgreen">
-        <a sec:authorize="hasAuthority('ADMIN')" class="navbar-brand" th:href="@{/main-page}" style="color: palegreen">Courses Manager</a>
+        <a sec:authorize="hasAuthority('ADMIN')" class="navbar-brand" th:href="@{/main-page}" style="color: palegreen; font-family: Brush Script MT; font-size: xx-large">Courses Manager</a>
         <div class="collapse navbar-collapse" id="navbarScroll" style="background-color: darkgreen">
             <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
                 <li class="nav-item dropdown">
