--- a/src/main/resources/templates/admin/main-page.html
+++ b/src/main/resources/templates/admin/main-page.html
@@ -6,60 +6,72 @@
     <title>Main Page</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 </head>
-<body>
+<body style="background-color: lightgreen">
 <div th:insert="fragments/navbar-for-admin::nav"></div>
-
-<div class="container" style="background-color: papayawhip; height: 70px; margin-top:100px">
-    <h1 style="text-align: center; font-style: italic; font: 40pt Georgia; color: red">Welcome to the Courses Manager application</h1>
-    <br/>
-    <h1 style="text-align: center; font-style: italic; font: 30pt Georgia; color: darkred">Select the option you want to manage</h1>
+<div class="container" style="background-color: palegreen; border-color: darkgreen; font-family: Brush Script MT; height: 100px; margin-top:10px">
+    <h1 style="text-align: center; font-size: 60pt; color: darkgreen">Welcome to the Courses Manager application</h1>
+    <h2 style="text-align: center; color: darkgreen; font-family: Brush Script MT; font-size: 40pt">Select the option you want to manage</h2>
 </div>
-
-<br/>
-<br/>
-<br/>
-<br/>
-<div class="container" style="background-color: seashell; padding: 50px; border-radius:20px;">
-    <table align="center" style="text-align: center; width: 80%">
-        <tbody>
+<div class="container" style="margin-top:80px;">
+    <table class="table" align="center" style="text-align: center; width:80%">
+        <thead>
+        <tr style="background-color: darkgreen; width: 100%; height: 30px; color: palegreen; font-family: Brush Script MT; font-size: xx-large">
+            <th>Courses</th>
+            <th>Blocks</th>
+            <th>Classes</th>
+        </tr>
+        </thead>
+        <tbody style="background-color: palegreen">
         <tr>
             <td>
-                <form th:action="@{/main-page/courses-manager}">
-                    <button type="submit" class="btn btn-primary" style="width: 100%; font: 20pt Verdana; background-color: gold">Courses</button>
-                </form>
+                <a th:href="@{/main-page/courses-manager}">
+                    <img th:src="@{/uploads/courses.png}" class="responsive" />
+                </a>
             </td>
             <td>
-                <form th:action="@{/main-page/blocks-manager}">
-                    <button type="submit" class="btn btn-primary" style="width: 100%; font: 20pt Verdana; background-color: gold">Blocks</button>
-                </form>
+                <a th:href="@{/main-page/blocks-manager}">
+                    <img th:src="@{/uploads/blocks.png}" class="responsive" />
+                </a>
             </td>
             <td>
-                <form th:action="@{/main-page/classes-manager}">
-                    <button type="submit" class="btn btn-primary" style="width: 100%; font: 20pt Verdana; background-color: gold">Classes</button>
-                </form>
+                <a th:href="@{/main-page/classes-manager}">
+                    <img th:src="@{/uploads/classes.png}" class="responsive" />
+                </a>
             </td>
         </tr>
+        </tbody>
+    </table>
+    <br/>
+    <br/>
+    <table class="table" align="center" style="text-align: center; width:80%">
+        <thead>
+        <tr style="background-color: darkgreen; width: 100%; height: 30px; color: palegreen; font-family: Brush Script MT; font-size: xx-large">
+            <th>Users</th>
+            <th>Registrations</th>
+            <th>Notifications</th>
+        </tr>
+        </thead>
+        <tbody style="background-color: palegreen">
         <tr>
             <td>
-                <form th:action="@{/main-page/notifications-manager}">
-                    <button type="submit" class="btn btn-primary" style="width: 100%; font: 20pt Verdana; background-color: gold">Notifications</button>
-                </form>
+                <a th:href="@{/main-page/users-manager}">
+                    <img th:src="@{/uploads/users.png}" class="responsive" />
+                </a>
             </td>
             <td>
-                <form th:action="@{/main-page/users-manager}">
-                    <button type="submit" class="btn btn-primary" style="width: 100%; font: 20pt Verdana; background-color: gold">Users</button>
-                </form>
+                <a th:href="@{/main-page/registrations-manager}">
+                    <img th:src="@{/uploads/registrations.png}" class="responsive" />
+                </a>
             </td>
             <td>
-                <form th:action="@{/main-page/registrations-manager}">
-                    <button type="submit" class="btn btn-primary" style="width: 100%; font: 20pt Verdana; background-color: gold">Registrations</button>
-                </form>
+                <a th:href="@{/main-page/notifications-manager}">
+                    <img th:src="@{/uploads/notifications.png}" class="responsive" />
+                </a>
             </td>
         </tr>
         </tbody>
     </table>
 </div>
-
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 </body>
 </html>
