Courses manager CSS done

--- a/src/main/resources/templates/admin/main-page.html
+++ b/src/main/resources/templates/admin/main-page.html
@@ -30,7 +30,7 @@
             </td>
             <td>
                 <a th:href="@{/main-page/blocks-manager}">
-                    <img th:src="@{/uploads/blocks.png}" class="responsive" />
+                    <img th:src="@{/uploads/block.png}" class="responsive" />
                 </a>
             </td>
             <td>
