--- a/src/main/resources/templates/admin/registrations-manager.html
+++ b/src/main/resources/templates/admin/registrations-manager.html
@@ -6,50 +6,59 @@
     <title>Registrations Manager</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 </head>
-<body>
+<body style="background-color: lightgreen">
 <div th:insert="fragments/navbar-for-admin::nav"></div>
-
-<div class="container" style="background-color: papayawhip; height: 70px; margin-top:100px">
-    <h1 style="text-align: center; font-style: italic; font: 40pt Georgia; color: darkred">On this page you can manage registrations</h1>
+<div class="container" style="background-color: palegreen; border-color: darkgreen; font-family: Brush Script MT; height: 90px; margin-top:10px">
+    <h2 style="text-align: center; color: darkgreen; font-family: Brush Script MT; font-size: 50pt">On this page you can manage registrations</h2>
 </div>
-<div class="container" style="background-color: seashell; padding: 50px; border-radius:20px;">
-    <table align="center" style="text-align: center; width: 80%">
-        <tbody>
+<div class="container" style="margin-top:80px;">
+    <table class="table" align="center" style="text-align: center; width:80%">
+        <thead>
+        <tr style="background-color: darkgreen; width: 100%; height: 30px; color: palegreen; font-family: Brush Script MT; font-size: xx-large">
+            <th>Show all registrations</th>
+            <th>Add new registration</th>
+        </tr>
+        </thead>
+        <tbody style="background-color: palegreen">
         <tr>
             <td>
-                <form th:action="@{/main-page/all-registrations}">
-                    <button type="submit" class="btn btn-primary" style="width: 100%; font: 20pt Verdana; background-color: darkgoldenrod">Show registrations</button>
-                </form>
+                <a th:href="@{/main-page/all-registrations}">
+                    <img th:src="@{/uploads/show.png}" class="responsive" />
+                </a>
             </td>
             <td>
-                <form th:action="@{/main-page/registrations/delete-registration}">
-                    <button type="submit" class="btn btn-primary" style="width: 100%; font: 20pt Verdana; background-color: darkgoldenrod">Delete registration</button>
-                </form>
+                <a th:href="@{/main-page/registrations}">
+                    <img th:src="@{/uploads/add.png}" class="responsive" />
+                </a>
             </td>
         </tr>
+        </tbody>
+    </table>
+    <br/>
+    <br/>
+    <table class="table" align="center" style="text-align: center; width:80%">
+        <thead>
+        <tr style="background-color: darkgreen; width: 100%; height: 30px; color: palegreen; font-family: Brush Script MT; font-size: xx-large">
+            <th>Update registration</th>
+            <th>Delete registration</th>
+        </tr>
+        </thead>
+        <tbody style="background-color: palegreen">
         <tr>
             <td>
-                <form th:action="@{/main-page/registrations}">
-                    <button type="submit" class="btn btn-primary" style="width: 100%; font: 20pt Verdana; background-color: darkgoldenrod">Add registration</button>
-                </form>
+                <a th:href="@{/main-page/registrations/update-registration}">
+                    <img th:src="@{/uploads/update.png}" class="responsive" />
+                </a>
             </td>
             <td>
-                <form th:action="@{/main-page/registrations/update-registration}">
-                    <button type="submit" class="btn btn-primary" style="width: 100%; font: 20pt Verdana; background-color: darkgoldenrod">Update registration</button>
-                </form>
+                <a th:href="@{/main-page/registrations/delete-registration}">
+                    <img th:src="@{/uploads/delete.png}" class="responsive" />
+                </a>
             </td>
         </tr>
         </tbody>
     </table>
 </div>
-
-<div align="center">
-    <form th:action="@{/main-page}">
-        <button type="submit" class="btn btn-primary" style="width: 80%">Back to main page</button>
-    </form>
-
-</div>
-
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 </body>
 </html>
