--- a/src/main/resources/templates/admin/courses/add-course.html
+++ b/src/main/resources/templates/admin/courses/add-course.html
@@ -5,46 +5,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Add new course</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <style>
+        input[type="file"]::file-selector-button {
+            padding: 0.2em 0.4em;
+            background-color: darkgreen;
+            color: palegreen;
+            margin-left: 2px;
+        }
+    </style>
 </head>
-
-
-
-<body>
-
+<body style="background-color: lightgreen">
 <div th:insert="fragments/navbar-for-admin::nav"></div>
 <div class="container" style="margin-top:100px;">
   <div class="row">
-    <form th:action="@{/main-page/courses/add}" th:object="${newCourse}" method="post" enctype="multipart/form-data">
+    <form th:action="@{/main-page/courses/add}" th:object="${newCourse}" method="post" enctype="multipart/form-data" style="background-color: palegreen;">
       <div class="mb-3">
-        <label for="title" class="form-label">Title</label>
-        <input type="text" class="form-control" id="title" th:field="*{title}">
+        <label for="title" class="form-label" style="color: darkgreen; font-family: Brush Script MT; font-size: 30pt">Title</label>
+        <input type="text" class="form-control" style="background-color: darkgreen; color: palegreen" id="title" th:field="*{title}">
       </div>
-      <div class="mb-3">
-        <input type="file" class="form-control" name="image" accept="image/*"/>
+      <div class="mb-3" style="background-color: palegreen; color: darkgreen">
+        <input type="file" class="form-control" style="background-color: darkgreen; color: palegreen" name="image" accept="image/*"/>
       </div>
-        <div align="center">
-            <button type="submit" class="btn btn-primary" style="width: 45%">Add</button>
+        <div align="center" >
+            <button type="submit" class="btn btn-primary" style="width: 30%; margin-bottom: 15px; background-color: darkgreen; border-color: darkgreen; color: palegreen">Add</button>
         </div>
-
     </form>
   </div>
 </div>
-<br/>
-<div align="center">
-    <form th:action="@{/main-page/courses-manager}">
-        <button type="submit" class="btn btn-primary" style="width: 40%">Back to the Courses Manager</button>
-    </form>
-</div>
-<br/>
-<div align="center">
-    <form th:action="@{/main-page}">
-        <button type="submit" class="btn btn-primary" style="width: 40%">Back to main page</button>
-    </form>
-</div>
-
-
+</br/>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
-
-
 </body>
 </html>
