--- a/src/main/resources/templates/admin/courses/add-course-summary.html
+++ b/src/main/resources/templates/admin/courses/add-course-summary.html
@@ -6,35 +6,21 @@
     <title>Add course summary</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 </head>
-<body>
-
+<body style="background-color: lightgreen">
 <div th:insert="fragments/navbar-for-admin::nav"></div>
-<div class="container" style="margin-top:100px; text-align: center">
-    New course added
+<div class="container" style="margin-top:100px; text-align: center; background-color: palegreen">
+    <br>
+    <br>
+    <h2 style="background-color: palegreen; color: darkgreen; font-family: Brush Script MT; font-size: 50pt;">New course added</h2>
     <br/>
     <br/>
     <br/>
-    Regards,
+    <h2 style="background-color: palegreen; color: darkgreen; font-family: Brush Script MT; font-size: 40pt">Regards,</h2>
     <br/>
-    Courses_Manager Team
-    <br/>
+    <h2 style="background-color: palegreen; color: darkgreen; font-family: Brush Script MT; font-size: 30pt">Courses Manager Team</h2>
     <br/>
     <br/>
 </div>
-
-
-<div align="center">
-    <form th:action="@{/main-page/courses-manager}">
-        <button type="submit" class="btn btn-primary" style="width: 80%">Back to the Courses Manager</button>
-    </form>
-</div>
-<br/>
-<div align="center">
-    <form th:action="@{/main-page}">
-        <button type="submit" class="btn btn-primary" style="width: 80%">Back to main page</button>
-    </form>
-</div>
-
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 </body>
 </html>
