--- a/src/main/resources/templates/admin/courses/all-courses.html
+++ b/src/main/resources/templates/admin/courses/all-courses.html
@@ -7,15 +7,17 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 </head>
-<body>
+<body style="background-color: lightgreen">
 <div th:insert="fragments/navbar-for-admin::nav"></div>
-<div class="container" style="margin-top:100px">
+<h2 style="text-align: center; color: darkgreen; font-family: Brush Script MT; font-size: 60pt; margin-top: 2
+0px">Courses</h2>
+<div class="container" style="margin-top:20px; background-color: palegreen; margin-bottom: 100px">
     <div class="row" align="center" text-align="center">
         <th:block th:each="course : ${courses}">
             <div class="col-4">
                 <div class="course" style="width: 100%; margin-bottom: 25px;">
                     <div class="course-body">
-                        <h5 class="course-title custom-center" th:text="${course.title}">Course title</h5>
+                        <h5 class="course-title custom-center" th:text="${course.title}" style="margin-top: 20px; background-color: darkgreen; color: palegreen; font-family: Brush Script MT; font-size: 30pt">Course title</h5>
                         <a th:href="@{/main-page/courses/details/__${course.id}__}">
                             <img th:src="@{/uploads/__${course.imageName}__}" th:alt="${course.imageName}" class="responsive" />
                         </a>
@@ -26,18 +28,6 @@
         </th:block>
     </div>
 </div>
-<div align="center">
-    <form th:action="@{/main-page/courses-manager}">
-        <button type="submit" class="btn btn-primary" style="width: 40%">Back to the Courses Manager</button>
-    </form>
-</div>
-<br/>
-<div align="center">
-    <form th:action="@{/main-page}">
-        <button type="submit" class="btn btn-primary" style="width: 40%">Back to main page</button>
-    </form>
-</div>
-
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 </body>
