--- a/src/main/resources/templates/admin/courses/course-details.html
+++ b/src/main/resources/templates/admin/courses/course-details.html
@@ -6,13 +6,13 @@
     <title>Course details</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 </head>
-<body>
+<body style="background-color: lightgreen">
 <div th:insert="fragments/navbar-for-admin::nav"></div>
-<div class="container" align="center" style="margin-top:100px">
+<div class="container" align="center" style="margin-top:30px; background-color: palegreen; width: 50%">
     <div class="row" align="center" text-align="center">
         <div class="course" style="width: 100%; margin-bottom: 25px;">
             <div th:object="${courseById}" class="course-body">
-                <h5 class="course-title custom-center" th:text="${courseById.title}">Course title</h5>
+                <h5 class="course-title custom-center" th:text="${courseById.title}" style="text-align: center; color: darkgreen; font-family: Brush Script MT; font-size: 60pt;">Course title</h5>
                 <a>
                     <img th:src="@{/uploads/__${courseById.imageName}__}" th:alt="${courseById.imageName}" class="responsive" />
                 </a>
@@ -20,42 +20,25 @@
         </div>
     </div>
 </div>
-
-
-<div class="container" style="text-align: center; font-style: italic; font: 40pt Georgia; color: darkred">Blocks in the course</div>
-
-<div class="container" style="margin-top:100px">
+<div class="container" align="center" style="margin-top:30px; margin-bottom: 30px; background-color: palegreen">
+    <div style="background-color: palegreen; margin-top: 30px">
+        <h2 style="text-align: center; color: darkgreen; font-family: Brush Script MT; font-size: 60pt;">Blocks</h2>
+    </div>
     <div class="row" align="center" text-align="center">
         <th:block th:each="block : ${blocksInCourse}">
             <div class="col-4">
-                <div class="block" style="width: 100%; margin-bottom: 25px;">
+                <div class="block" style="width: 100%; margin-bottom: 20px;">
                     <div class="block-body">
-                        <h5 class="block-title custom-center" th:text="${block.blockTitle}" style="background-color: paleturquoise">Block title</h5>
+                        <h5 class="block-title custom-center" th:text="${block.blockTitle}" style="text-align: center; color: palegreen; font-family: Brush Script MT; font-size: 30pt; background-color: darkgreen;">Block title</h5>
                         <a th:href="@{/main-page/blocks/details/__${block.id}__}">
-                            <img th:src="@{/uploads/blocks.png}" class="responsive" />
+                            <img th:src="@{/uploads/block.png}" class="responsive" />
                         </a>
                     </div>
-
                 </div>
             </div>
         </th:block>
     </div>
 </div>
-
-<br/>
-<div align="center">
-    <form th:action="@{/main-page/courses-manager}">
-        <button type="submit" class="btn btn-primary" style="width: 40%">Back to the Courses Manager</button>
-    </form>
-</div>
-<br/>
-<div align="center">
-    <form th:action="@{/main-page}">
-        <button type="submit" class="btn btn-primary" style="width: 40%">Back to main page</button>
-    </form>
-</div>
-
-
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 </body>
 </html>
