--- a/src/main/resources/templates/admin/courses/update-course.html
+++ b/src/main/resources/templates/admin/courses/update-course.html
@@ -5,58 +5,56 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Update course</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <style>
+        input[type="file"]::file-selector-button {
+            padding: 0.2em 0.4em;
+            background-color: darkgreen;
+            color: palegreen;
+            margin-left: 2px;
+        }
+    </style>
 </head>
-<body>
+<body style="background-color: lightgreen">
 <div th:insert="fragments/navbar-for-admin::nav"></div>
-<div class="container" style="text-align: center; font-style: italic; font: 40pt Georgia; color: darkred">Courses</div>
-<div class="container" style="background-color: white; padding: 50px; border-radius:20px;">
-    <table class="table table-striped" align="center" style="text-align: center; width:50%">
-        <thead>
-        <tr style="background-color: palegreen; width: 100%; height: 30px">
+<div class="container" style="background-color: palegreen; padding: 50px; border-radius:20px; margin-top: 10px">
+    <h2 style="text-align: center; font-size: 60pt; font-family: Brush Script MT; color: darkgreen">Courses</h2>
+    <table class="table table-striped" align="center" style="text-align: center; width:50%; background-color: palegreen; border-color: darkgreen;">
+        <thead style="margin-top: 10px">
+        <tr style="background-color: palegreen; width: 100%; color: darkgreen; font-family: Brush Script MT; font-size: 40pt">
             <th>Id</th>
             <th>Title</th>
         </tr>
         </thead>
         <tbody>
-        <tr th:each="course : ${courses}">
+        <tr th:each="course : ${courses}" style="background-color: palegreen; width: 100%; color: darkgreen;">
             <td th:text="${course.id}"></td>
             <td th:text="${course.title}"></td>
         </tr>
         </tbody>
     </table>
 </div>
-<div class="container" style="text-align: center; font-style: italic; font: 40pt Georgia; color: darkred">Update course</div>
-<div class="container" style="margin-top:100px;">
+<div class="container" style="background-color: palegreen; border-color: darkgreen; font-family: Brush Script MT; margin-top:10px">
+    <h2 style="text-align: center; font-size: 60pt; color: darkgreen">Update course</h2>
+</div>
+<div class="container" style="background-color: palegreen; margin-top:10px; margin-bottom: 30px">
     <div class="row">
         <form th:action="@{/main-page/courses/update}" th:object="${courseToUpdate}" method="post" enctype="multipart/form-data">
             <div class="mb-3">
-                <label for="course-id" class="form-label">Course id</label>
-                <input type="text" placeholder="Type id of EXISTING course" class="form-control" id="course-id" th:field="*{id}">
+                <label for="course-id" class="form-label" style="color: darkgreen; font-family: Brush Script MT; font-size: 30pt">Course id</label>
+                <input style="background-color: darkgreen; color: palegreen" type="text" placeholder="Type id of EXISTING course" class="form-control" id="course-id" th:field="*{id}">
             </div>
             <div>
-                <label for="course-new-title" class="form-label">New course title</label>
-                <input type="text" class="form-control" id="course-new-title" th:field="*{title}">
+                <label style="color: darkgreen; font-family: Brush Script MT; font-size: 30pt" for="course-new-title" class="form-label">New course title</label>
+                <input style="background-color: darkgreen; color: palegreen" type="text" class="form-control" id="course-new-title" th:field="*{title}">
             </div>
-            <div class="mb-3">
-                <input type="file" class="form-control" name="image" accept="image/*"/>
+            <div class="mb-3" style="background-color: palegreen; color: darkgreen">
+                <input type="file" class="form-control" style="background-color: darkgreen; color: palegreen" name="image" accept="image/*"/>
             </div>
             <div align="center">
-                <button type="submit" class="btn btn-primary" style="width: 40%">Update</button>
+                <button type="submit" class="btn btn-primary" style="width: 30%; margin-bottom: 15px; background-color: darkgreen; border-color: darkgreen; color: palegreen">Update</button>
             </div>
         </form>
     </div>
-</div>
-<br/>
-<div align="center">
-    <form th:action="@{/main-page/courses-manager}">
-        <button type="submit" class="btn btn-primary" style="width: 80%">Back to the Courses Manager</button>
-    </form>
-</div>
-<br/>
-<div align="center">
-    <form th:action="@{/main-page}">
-        <button type="submit" class="btn btn-primary" style="width: 80%">Back to main page</button>
-    </form>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 </body>
