--- a/src/main/resources/templates/admin/blocks/all-blocks.html
+++ b/src/main/resources/templates/admin/blocks/all-blocks.html
@@ -4,22 +4,23 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>View All Blocks</title>
+    <title>Blocks</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
 </head>
-<body style="background-color: #f6f6f6">
+<body style="background-color: lightgreen">
 <div th:insert="fragments/navbar-for-admin::nav"></div>
-<div class="container" style="margin-top: 100px; background-color: white; padding: 50px; border-radius:20px;">
-    <table align="center" style="text-align: center; width:80%">
-        <thead>
-        <tr style="background-color: palegreen; width: 100%; height: 30px">
+<div class="container" style="background-color: palegreen; padding: 50px; border-radius:20px; margin-top: 10px">
+    <h2 style="text-align: center; color: darkgreen; font-family: Brush Script MT; font-size: 60pt">Blocks</h2>
+    <table align="center" style="text-align: center; width:50%; background-color: palegreen; border-color: darkgreen;">
+        <thead style="margin-top: 10px">
+        <tr style="background-color: palegreen; width: 100%; color: darkgreen; font-family: Brush Script MT; font-size: 40pt">
             <th>Id</th>
             <th>Block title</th>
             <th>Course title</th>
         </tr>
         </thead>
         <tbody>
-        <tr th:each="block : ${blocks}">
+        <tr th:each="block : ${blocks}" style="background-color: palegreen; width: 100%; color: darkgreen;">
             <td th:text="${block.id}"></td>
             <td th:text="${block.blockTitle}"></td>
             <td th:text="${block.courseTitle}"></td>
@@ -27,33 +28,21 @@
         </tbody>
     </table>
 </div>
-<div class="container" style="margin-top:100px">
+<div class="container" style="margin-top:20px; background-color: palegreen; margin-bottom: 100px">
     <div class="row" align="center" text-align="center">
         <th:block th:each="block : ${blocks}">
             <div class="col-4">
                 <div class="block" style="width: 100%; margin-bottom: 25px;">
                     <div class="block-body">
-                        <h5 class="block-title custom-center" th:text="${block.blockTitle}">Block title</h5>
+                        <h5 class="block-title custom-center" th:text="${block.blockTitle}" style="margin-top: 20px; background-color: darkgreen; color: palegreen; font-family: Brush Script MT; font-size: 30pt">Block title</h5>
                         <a th:href="@{/main-page/blocks/details/__${block.id}__}">
-                            <img th:src="@{/uploads/blocks.png}" class="responsive" />
+                            <img th:src="@{/uploads/block.png}" class="responsive" />
                         </a>
                     </div>
                 </div>
             </div>
         </th:block>
     </div>
-</div>
-<br/>
-<div align="center">
-    <form th:action="@{/main-page/blocks-manager}">
-        <button type="submit" class="btn btn-primary" style="width: 80%">Back to the Blocks Manager</button>
-    </form>
-</div>
-<br/>
-<div align="center">
-    <form th:action="@{/main-page}">
-        <button type="submit" class="btn btn-primary" style="width: 80%">Back to main page</button>
-    </form>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
 </body>
