Navbar for student done, login template changed

--- a/src/main/resources/templates/admin/blocks/block-details.html
+++ b/src/main/resources/templates/admin/blocks/block-details.html
@@ -23,7 +23,7 @@
 <div class="container" align="center" style="margin-top:30px; margin-bottom: 30px; background-color: palegreen">
     <div style="background-color: palegreen; margin-top: 30px; margin-bottom: 30px">
         <h2 style="text-align: center; color: darkgreen; font-family: Brush Script MT; font-size: 60pt;">Classes</h2>
-        <table class="table table-striped" align="center" style="text-align: center; width:80%; margin-bottom: 30px">
+        <table class="table table-striped" align="center" style="text-align: center; width:80%; border-color: darkgreen; margin-bottom: 30px">
             <thead>
             <tr style="background-color: palegreen; width: 100%; color: darkgreen; font-family: Brush Script MT; font-size: 30pt">
                 <th>Id</th>
