--- a/src/main/resources/templates/admin/blocks/update-block.html
+++ b/src/main/resources/templates/admin/blocks/update-block.html
@@ -27,7 +27,7 @@
 </div>
 <div class="container" style="background-color: palegreen; padding: 50px; border-radius:20px; margin-top: 10px">
     <h2 style="text-align: center; font-size: 60pt; font-family: Brush Script MT; color: darkgreen">Blocks</h2>
-    <table align="center" style="text-align: center; width:50%; background-color: palegreen; border-color: darkgreen;">
+    <table class="table table-striped" align="center" style="text-align: center; width:80%; background-color: palegreen; border-color: darkgreen;">
         <thead style="margin-top: 10px">
         <tr style="background-color: palegreen; width: 100%; color: darkgreen; font-family: Brush Script MT; font-size: 40pt">
             <th>Id</th>
