--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -7,19 +7,19 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 </head>
-<body>
-<div class="container" style="margin-top:100px; text-align: center">
+<body style="background-color: lightgreen">
+<div class="container" style="background-color: palegreen; margin-top:100px; text-align: center">
   <div class="center">
     <form th:action="@{/login}" method="post">
       <div class="mb-3">
-        <label for="username" class="form-label">Username</label>
-        <input id="username" type="text" class="form-control" name="username">
+        <label style="color: darkgreen; font-family: Brush Script MT; font-size: 30pt" for="username" class="form-label">Username</label>
+        <input style="background-color: darkgreen; color: palegreen" id="username" type="text" class="form-control" name="username">
       </div>
       <div class="mb-3">
-        <label for="password" class="form-label">Password</label>
-        <input id="password" type="password" class="form-control" name="password">
+        <label style="color: darkgreen; font-family: Brush Script MT; font-size: 30pt" for="password" class="form-label">Password</label>
+        <input style="background-color: darkgreen; color: palegreen" id="password" type="password" class="form-control" name="password">
       </div>
-      <button type="submit" style="width: 100%" class="btn btn-primary">Login</button>
+      <button type="submit" style="width: 30%; margin-bottom: 15px; background-color: darkgreen; border-color: darkgreen; color: palegreen" class="btn btn-primary">Login</button>
     </form>
   </div>
 </div>
