--- a/src/main/resources/templates/student/all-courses.html
+++ b/src/main/resources/templates/student/all-courses.html
@@ -8,6 +8,7 @@
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 </head>
 <body>
+<div th:insert="fragments/navbar-for-student::nav"></div>
 <div class="container" style="margin-top:100px">
   <div class="row" align="center" text-align="center">
     <th:block th:each="course : ${courses}">
