StudentController - registrations by student, navbar for student modified, main-page for student done, registrations by student and type data templates done

--- a/src/main/resources/templates/fragments/navbar-for-student.html
+++ b/src/main/resources/templates/fragments/navbar-for-student.html
@@ -13,7 +13,10 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" style="color: palegreen" href="#">Courses</a>
+          <a class="nav-link active" aria-current="page" style="color: palegreen" th:href="@{/student/courses}">Courses</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" style="color: palegreen" th:href="@{/student/registrations/type-data}">Registrations</a>
         </li>
       </ul>
     </div>
