--- a/src/main/resources/templates/student/add-registration-summary.html
+++ b/src/main/resources/templates/student/add-registration-summary.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Add registration summary for user</title>
+    <title>Add registration summary for student</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 </head>
 <body style="background-color: lightgreen">
-<div th:insert="fragments/navbar-for-admin::nav"></div>
+<div th:insert="fragments/navbar-for-student::nav"></div>
 <div class="container" style="margin-top:100px; text-align: center; background-color: palegreen">
     <br>
     <br>
