--- a/src/main/resources/templates/admin/courses/delete-course.html
+++ b/src/main/resources/templates/admin/courses/delete-course.html
@@ -10,6 +10,7 @@
 <div th:insert="fragments/navbar-for-admin::nav"></div>
 <div class="container" style="background-color: palegreen; padding: 50px; border-radius:20px; margin-top: 10px">
     <h2 style="text-align: center; font-size: 60pt; font-family: Brush Script MT; color: darkgreen">Courses</h2>
+    <h3 style="text-align: center; font-size: 30pt; color: darkgreen; font-family: Brush Script MT">Deleting the chosen course will also delete all blocks and all classes assigned to that course, all notifications assigned to the classes and all course registrations.</h3>
     <table class="table table-striped" align="center" style="text-align: center; width:50%; background-color: palegreen; border-color: darkgreen;">
         <thead style="margin-top: 10px">
         <tr style="background-color: palegreen; width: 100%; color: darkgreen; font-family: Brush Script MT; font-size: 40pt">
